# play-actix-api

./: .gitignore  Cargo.toml  README.md  crates.js  db_schema.sql  search-index.js  settings.html  source-files.js
.github/workflows/: rust.yml
implementors/actix_web/service/: trait.HttpServiceFactory.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
play_actix_api/: all.html  index.html  sidebar-items.js  struct.AppState.html
play_actix_api/config/: index.html  struct.Config.html
play_actix_api/models/: index.html  sidebar-items.js  type.Group.html  type.User.html
play_actix_api/repositories/: index.html  sidebar-items.js  type.Database.html  type.JoinTable.html  type.Table.html
play_actix_api/repositories/dbcontext/: index.html  sidebar-items.js  struct.Database.html  struct.JoinTable.html  struct.Table.html
play_actix_api/resources/: index.html  sidebar-items.js
play_actix_api/resources/group/: fn.init.html  index.html  sidebar-items.js  struct.GroupUpdate.html  struct.delete_group_by_name.html  struct.get_group_by_id.html  struct.patch_group_by_name.html  struct.post_group.html
play_actix_api/resources/health/: fn.health.html  index.html  sidebar-items.js  (+1 more)
src/: config.rs  lib.rs  main.rs
src/play_actix_api/: config.rs.html  lib.rs.html
src/repositories/: mod.rs
src/resources/: mod.rs  user.rs
tests/: config.test.json  tests.rs
tests/resources_test/: group_test.rs  mod.rs  user_test.rs
(+21 files in other folders)
