[package]
name = "play_actix_api"
version = "0.1.0"
authors = ["thaodt"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "2.0.2"
sqlx = { version = "0.3.5", features = ["mysql"] }
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.62"
uuid = { version = "1.1.0", features = ["serde", "v4"] }